--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ body, html {
     font-size: 0.67em;
     color: gainsboro;
     border-bottom:dotted;
-    
     list-style-position: inside;
     padding-bottom: 30px;
     margin-block-start: 2.33em;
@@ -66,6 +65,7 @@ body, html {
 	font-size: 1.5em;
 	font-weight: bold;
 	line-height: 1.5;
+    color:beige
   }
 
 .textblock p {
@@ -74,6 +74,7 @@ body, html {
 	font-size: 1em;
 	line-height: 1.2;
     color: antiquewhite ;
+    padding: 10px
   }
   
 
@@ -98,9 +99,8 @@ body, html {
 .textcolumn {
   float: left;
   width: 32%;
-  align-items: baseline;
   text-align: justify;
-  padding: 3px
+  padding: 4px
 }
 
 /* Clear floats after the columns */
@@ -279,7 +279,7 @@ this CSS element centers text elements*/
     .textblock, .video {
 		/* This section adjusts non-mobile screens*/
         margin: auto;
-        width: 50%;
+        width: 90%;
         padding: 50px;
         font-size: 125%;
     }
